fixed dark and light mode issue not using full height so had to use min-height . Also horizontal scroll bar was appearing because we set 100vw we should not set it or set max width to 100 vw

--- a/index.css
+++ b/index.css
@@ -11,8 +11,6 @@ a {
   color: inherit;
 }
 body {
-  width: 100vw;
-  overflow-x: hidden; /* Hide horizontal scrollbar */
   display: flex;
   flex-direction: column;
   font-family: "Libre Baskerville", serif;
@@ -21,12 +19,10 @@ body {
 .dark-theme,
 .light-theme {
   transition: background-color 0.5s ease, color 0.5s ease;
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
 #root {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 /* Dark theme */
